--- a/index.html
+++ b/index.html
@@ -6,47 +6,140 @@
   <title>TuningHub Dashboard</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: sans-serif; background: #f5f5f5; margin: 0; }
-    header { background: #111; color: white; padding: 20px; text-align: center; font-size: 24px; font-weight: bold; }
-    .stats { display: flex; flex-wrap: wrap; justify-content: center; gap: 16px; margin: 20px; }
-    .card { background: white; padding: 16px 24px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); font-size: 18px; }
-    .filters { text-align: center; margin-top: 10px; }
-    canvas { max-width: 1000px; margin: 20px auto; display: block; background: white; border-radius: 8px; padding: 20px; }
+    body { 
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+      background: #f5f5f5; 
+      margin: 0; 
+      padding: 0;
+    }
+    header { 
+      background: #1a1a1a; 
+      color: white; 
+      padding: 20px; 
+      text-align: center; 
+      font-size: 24px; 
+      font-weight: bold;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    .container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+    .stats { 
+      display: grid; 
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px; 
+      margin: 20px 0;
+    }
+    .card { 
+      background: white; 
+      padding: 20px; 
+      border-radius: 12px; 
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
+      font-size: 16px;
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .card-value {
+      font-size: 24px;
+      font-weight: bold;
+      margin-top: 8px;
+      color: #2c3e50;
+    }
+    .filters { 
+      text-align: center; 
+      margin: 20px 0;
+      padding: 15px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    select {
+      padding: 8px 12px;
+      border-radius: 6px;
+      border: 1px solid #ddd;
+      font-size: 16px;
+    }
+    .chart-container {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      margin: 20px 0;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+    .loading {
+      text-align: center;
+      padding: 20px;
+      color: #666;
+    }
+    .error {
+      color: #e74c3c;
+      text-align: center;
+      padding: 10px;
+      background: #ffebee;
+      border-radius: 6px;
+      margin: 10px 0;
+    }
   </style>
 </head>
 <body>
   <header>TuningHub Dashboard</header>
 
-  <div class="filters">
-    <label for="timeFilter">Zeitraum: </label>
-    <select id="timeFilter">
-      <option value="hour">Letzte Stunde</option>
-      <option value="24h">Letzte 24 Stunden</option>
-      <option value="7d">Letzte 7 Tage</option>
-      <option value="month">Letzter Monat</option>
-      <option value="year">Letztes Jahr</option>
-      <option value="all">Gesamt</option>
-    </select>
-  </div>
+  <div class="container">
+    <div class="filters">
+      <label for="timeFilter">Zeitraum: </label>
+      <select id="timeFilter">
+        <option value="hour">Letzte Stunde</option>
+        <option value="24h">Letzte 24 Stunden</option>
+        <option value="7d" selected>Letzte 7 Tage</option>
+        <option value="month">Letzter Monat</option>
+        <option value="year">Letztes Jahr</option>
+        <option value="all">Gesamt</option>
+      </select>
+    </div>
 
-  <div class="stats" id="stats">
-    <div class="card" id="pageviews">📈 Pageviews: </div>
-    <div class="card" id="login_attempts">🔐 Login-Versuche: </div>
-    <div class="card" id="login_errors">❌ Login-Fehler: </div>
-    <div class="card" id="unconfirmed">📧 Nicht bestätigte E-Mails: </div>
-    <div class="card" id="parts">⚙️ Hochgeladene Teile: </div>
-    <div class="card" id="users">👤 Registrierte Nutzer: </div>
-  </div>
+    <div id="loading" class="loading">Daten werden geladen...</div>
+    <div id="error" class="error" style="display: none;"></div>
 
-  <canvas id="chart"></canvas>
+    <div class="stats" id="stats" style="display: none;">
+      <div class="card">
+        <div>📈 Pageviews</div>
+        <div class="card-value" id="pageviews">0</div>
+      </div>
+      <div class="card">
+        <div>🔐 Login-Versuche</div>
+        <div class="card-value" id="login_attempts">0</div>
+      </div>
+      <div class="card">
+        <div>❌ Login-Fehler</div>
+        <div class="card-value" id="login_errors">0</div>
+      </div>
+      <div class="card">
+        <div>📧 Nicht bestätigte E-Mails</div>
+        <div class="card-value" id="unconfirmed">0</div>
+      </div>
+      <div class="card">
+        <div>⚙️ Hochgeladene Teile</div>
+        <div class="card-value" id="parts">0</div>
+      </div>
+      <div class="card">
+        <div>👤 Registrierte Nutzer</div>
+        <div class="card-value" id="users">0</div>
+      </div>
+    </div>
+
+    <div class="chart-container">
+      <canvas id="chart"></canvas>
+    </div>
+  </div>
 
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-    const tracking = createClient(
-      'https://lhxcnrogjjskgaclqxtm.supabase.co',
-      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImxoeGNucm9nampza2dhY2xxeHRtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI1MjU0MzUsImV4cCI6MjA2ODEwMTQzNX0.vOr_Esi9IIesFixkkvYQjYEqghrKCMeqbrPKW27zqww'
-    )
+    // Single Supabase client instance
     const supabase = createClient(
       'https://yvdptnkmgfxkrszitweo.supabase.co',
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl2ZHB0bmttZ2Z4a3Jzeml0d2VvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTA3MDAwMzQsImV4cCI6MjA2NjI3NjAzNH0.Kd6D6IQ_stUMrcbm2TN-7ACjFJvXNmkeNehQHavTmJo'
@@ -54,7 +147,10 @@
 
     const timeSelect = document.getElementById('timeFilter')
     const chartCanvas = document.getElementById('chart')
-    let chart
+    const loadingElement = document.getElementById('loading')
+    const errorElement = document.getElementById('error')
+    const statsElement = document.getElementById('stats')
+    let chart = null
 
     timeSelect.addEventListener('change', loadData)
     loadData()
@@ -65,65 +161,135 @@
         case 'hour': return new Date(now.getTime() - 60 * 60 * 1000)
         case '24h': return new Date(now.getTime() - 24 * 60 * 60 * 1000)
         case '7d': return new Date(now.getTime() - 7 * 24 * 60 * 60 * 1000)
-        case 'month': return new Date(now.setMonth(now.getMonth() - 1))
-        case 'year': return new Date(now.setFullYear(now.getFullYear() - 1))
+        case 'month': 
+          const monthAgo = new Date()
+          monthAgo.setMonth(monthAgo.getMonth() - 1)
+          return monthAgo
+        case 'year': 
+          const yearAgo = new Date()
+          yearAgo.setFullYear(yearAgo.getFullYear() - 1)
+          return yearAgo
         default: return null
       }
     }
 
     async function loadData() {
-      const range = getStartTime(timeSelect.value)
+      try {
+        // Show loading state
+        loadingElement.style.display = 'block'
+        errorElement.style.display = 'none'
+        statsElement.style.display = 'none'
+        if (chart) chart.destroy()
 
-      const { data: events } = await tracking.from('tracking_events')
-        .select('*')
-        .then(({ data }) => {
-          return range ? data.filter(e => new Date(e.timestamp) >= range) : data
+        const range = getStartTime(timeSelect.value)
+
+        // Fetch all data in parallel
+        const [
+          { data: events, error: eventsError },
+          { data: parts, error: partsError },
+          { data: users, error: usersError }
+        ] = await Promise.all([
+          supabase.from('tracking_events').select('*'),
+          supabase.from('parts').select('*'),
+          supabase.from('users').select('*')
+        ])
+
+        // Check for errors
+        if (eventsError) throw new Error(`Tracking Events: ${eventsError.message}`)
+        if (partsError) throw new Error(`Parts: ${partsError.message}`)
+        if (usersError) throw new Error(`Users: ${usersError.message}`)
+
+        // Filter data based on time range
+        const filteredEvents = range 
+          ? events.filter(e => new Date(e.timestamp) >= range)
+          : events
+
+        const filteredParts = range 
+          ? parts.filter(p => new Date(p.created_at) >= range)
+          : parts
+
+        const filteredUsers = range 
+          ? users.filter(u => new Date(u.created_at) >= range)
+          : users
+
+        // Calculate counts
+        const counts = {
+          pageview: filteredEvents.filter(e => e.event_type === 'pageview').length,
+          login_attempt: filteredEvents.filter(e => e.event_type === 'login_attempt').length,
+          login_error: filteredEvents.filter(e => e.event_type === 'login_error').length,
+          login_email_not_confirmed: filteredEvents.filter(e => e.event_type === 'login_email_not_confirmed').length
+        }
+
+        // Update UI
+        document.getElementById('pageviews').textContent = counts.pageview
+        document.getElementById('login_attempts').textContent = counts.login_attempt
+        document.getElementById('login_errors').textContent = counts.login_error
+        document.getElementById('unconfirmed').textContent = counts.login_email_not_confirmed
+        document.getElementById('parts').textContent = filteredParts.length
+        document.getElementById('users').textContent = filteredUsers.length
+
+        // Prepare chart data
+        const eventCountsByDay = {}
+        filteredEvents.forEach(e => {
+          const d = new Date(e.timestamp).toISOString().slice(0, 10)
+          eventCountsByDay[d] = (eventCountsByDay[d] || 0) + 1
         })
 
-      const counts = {
-        pageview: 0,
-        login_attempt: 0,
-        login_error: 0,
-        login_email_not_confirmed: 0
+        const labels = Object.keys(eventCountsByDay).sort()
+        const values = labels.map(l => eventCountsByDay[l])
+
+        // Create chart
+        chart = new Chart(chartCanvas, {
+          type: 'bar',
+          data: {
+            labels: labels,
+            datasets: [{
+              label: 'Events pro Tag',
+              data: values,
+              backgroundColor: '#3498db',
+              borderColor: '#2980b9',
+              borderWidth: 1
+            }]
+          },
+          options: {
+            responsive: true,
+            plugins: {
+              legend: {
+                position: 'top',
+              },
+              tooltip: {
+                mode: 'index',
+                intersect: false
+              }
+            },
+            scales: { 
+              y: { 
+                beginAtZero: true,
+                title: {
+                  display: true,
+                  text: 'Anzahl Events'
+                }
+              },
+              x: {
+                title: {
+                  display: true,
+                  text: 'Datum'
+                }
+              }
+            }
+          }
+        })
+
+        // Hide loading and show data
+        loadingElement.style.display = 'none'
+        statsElement.style.display = 'grid'
+
+      } catch (error) {
+        console.error('Fehler beim Laden der Daten:', error)
+        loadingElement.style.display = 'none'
+        errorElement.style.display = 'block'
+        errorElement.textContent = `Fehler: ${error.message}`
       }
-      for (let e of events) {
-        if (counts[e.event_type] !== undefined) counts[e.event_type]++
-      }
-
-      const { data: parts } = await supabase.from('parts').select('*')
-      const filteredParts = range ? parts.filter(p => new Date(p.created_at) >= range) : parts
-
-      const { data: users } = await supabase.from('users').select('*')
-      const filteredUsers = range ? users.filter(u => new Date(u.created_at) >= range) : users
-
-      document.getElementById('pageviews').textContent = `📈 Pageviews: ${counts.pageview}`
-      document.getElementById('login_attempts').textContent = `🔐 Login-Versuche: ${counts.login_attempt}`
-      document.getElementById('login_errors').textContent = `❌ Login-Fehler: ${counts.login_error}`
-      document.getElementById('unconfirmed').textContent = `📧 Nicht bestätigte E-Mails: ${counts.login_email_not_confirmed}`
-      document.getElementById('parts').textContent = `⚙️ Hochgeladene Teile: ${filteredParts.length}`
-      document.getElementById('users').textContent = `👤 Registrierte Nutzer: ${filteredUsers.length}`
-
-      const eventCountsByDay = {}
-      for (let e of events) {
-        const d = new Date(e.timestamp).toISOString().slice(0, 10)
-        eventCountsByDay[d] = (eventCountsByDay[d] || 0) + 1
-      }
-
-      const labels = Object.keys(eventCountsByDay).sort()
-      const values = labels.map(l => eventCountsByDay[l])
-
-      if (chart) chart.destroy()
-      chart = new Chart(chartCanvas, {
-        type: 'bar',
-        data: {
-          labels: labels,
-          datasets: [{ label: 'Events', data: values, backgroundColor: '#1abc9c' }]
-        },
-        options: {
-          responsive: true,
-          scales: { y: { beginAtZero: true } }
-        }
-      })
     }
   </script>
 </body>
