--- a/index.html
+++ b/index.html
@@ -6,127 +6,40 @@
   <title>TuningHub Dashboard</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { 
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-      background: #f5f5f5; 
-      margin: 0; 
-      padding: 0;
-    }
-    header { 
-      background: #1a1a1a; 
-      color: white; 
-      padding: 20px; 
-      text-align: center; 
-      font-size: 24px; 
-      font-weight: bold;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    .stats { 
-      display: grid; 
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 20px; 
-      margin: 20px 0;
-    }
-    .card { 
-      background: white; 
-      padding: 20px; 
-      border-radius: 12px; 
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
-      font-size: 16px;
-      transition: transform 0.3s ease;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    .card-value {
-      font-size: 24px;
-      font-weight: bold;
-      margin-top: 8px;
-      color: #2c3e50;
-    }
-    .filters { 
-      text-align: center; 
-      margin: 20px 0;
-      padding: 15px;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    select {
-      padding: 8px 12px;
-      border-radius: 6px;
-      border: 1px solid #ddd;
-      font-size: 16px;
-    }
-    .chart-container {
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
-      margin: 20px 0;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    }
-    .loading {
-      text-align: center;
-      padding: 20px;
-      color: #666;
-    }
-    .error {
-      color: #e74c3c;
-      text-align: center;
-      padding: 10px;
-      background: #ffebee;
-      border-radius: 6px;
-      margin: 10px 0;
-    }
+    /* Behalten Sie Ihre bestehenden Styles bei */
+    body { font-family: sans-serif; background: #f5f5f5; margin: 0; }
+    header { background: #111; color: white; padding: 20px; text-align: center; }
+    .stats { display: flex; flex-wrap: wrap; justify-content: center; gap: 16px; margin: 20px; }
+    .card { background: white; padding: 16px 24px; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
+    .filters { text-align: center; margin-top: 10px; }
+    canvas { max-width: 1000px; margin: 20px auto; background: white; border-radius: 8px; padding: 20px; }
+    .error { color: red; text-align: center; padding: 10px; }
   </style>
 </head>
 <body>
   <header>TuningHub Dashboard</header>
 
-  <div class="container">
-    <div class="filters">
-      <label for="timeFilter">Zeitraum: </label>
-      <select id="timeFilter">
-        <option value="hour">Letzte Stunde</option>
-        <option value="24h">Letzte 24 Stunden</option>
-        <option value="7d" selected>Letzte 7 Tage</option>
-        <option value="month">Letzter Monat</option>
-        <option value="year">Letztes Jahr</option>
-        <option value="all">Gesamt</option>
-      </select>
-    </div>
-
-    <div id="loading" class="loading">Daten werden geladen...</div>
-    <div id="error" class="error" style="display: none;"></div>
-
-    <div class="stats" id="stats" style="display: none;">
-      <div class="card">
-        <div>📈 Pageviews</div>
-        <div class="card-value" id="pageviews">0</div>
-      </div>
-      <div class="card">
-        <div>⚙️ Hochgeladene Teile</div>
-        <div class="card-value" id="parts">0</div>
-      </div>
-      <div class="card">
-        <div>📊 Gesamt-Events</div>
-        <div class="card-value" id="total_events">0</div>
-      </div>
-      <div class="card">
-        <div>👤 Eindeutige Nutzer</div>
-        <div class="card-value" id="unique_users">0</div>
-      </div>
-    </div>
-
-    <div class="chart-container">
-      <canvas id="chart"></canvas>
-    </div>
+  <div class="filters">
+    <label for="timeFilter">Zeitraum: </label>
+    <select id="timeFilter">
+      <option value="hour">Letzte Stunde</option>
+      <option value="24h">Letzte 24 Stunden</option>
+      <option value="7d">Letzte 7 Tage</option>
+      <option value="month">Letzter Monat</option>
+      <option value="year">Letztes Jahr</option>
+      <option value="all">Gesamt</option>
+    </select>
   </div>
+
+  <div id="error" class="error" style="display: none;"></div>
+
+  <div class="stats" id="stats">
+    <div class="card" id="parts">⚙️ Hochgeladene Teile: </div>
+    <div class="card" id="parts_last_month">📅 Teile (letzter Monat): </div>
+    <div class="card" id="avg_price">💰 Durchschnittspreis: </div>
+  </div>
+
+  <canvas id="chart"></canvas>
 
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
@@ -138,10 +51,8 @@
 
     const timeSelect = document.getElementById('timeFilter')
     const chartCanvas = document.getElementById('chart')
-    const loadingElement = document.getElementById('loading')
     const errorElement = document.getElementById('error')
-    const statsElement = document.getElementById('stats')
-    let chart = null
+    let chart
 
     timeSelect.addEventListener('change', loadData)
     loadData()
@@ -152,107 +63,68 @@
         case 'hour': return new Date(now.getTime() - 60 * 60 * 1000)
         case '24h': return new Date(now.getTime() - 24 * 60 * 60 * 1000)
         case '7d': return new Date(now.getTime() - 7 * 24 * 60 * 60 * 1000)
-        case 'month': 
-          const monthAgo = new Date()
-          monthAgo.setMonth(monthAgo.getMonth() - 1)
-          return monthAgo
-        case 'year': 
-          const yearAgo = new Date()
-          yearAgo.setFullYear(yearAgo.getFullYear() - 1)
-          return yearAgo
+        case 'month': return new Date(now.setMonth(now.getMonth() - 1))
+        case 'year': return new Date(now.setFullYear(now.getFullYear() - 1))
         default: return null
       }
     }
 
     async function loadData() {
       try {
-        loadingElement.style.display = 'block'
-        errorElement.style.display = 'none'
-        statsElement.style.display = 'none'
-        if (chart) chart.destroy()
-
         const range = getStartTime(timeSelect.value)
 
-        // Nur die Tabellen abfragen, die existieren (parts und tracking_events)
-        const [
-          { data: parts, error: partsError },
-          { data: events, error: eventsError }
-        ] = await Promise.all([
-          supabase.from('parts').select('*'),
-          supabase.from('tracking_events').select('*')
-        ])
+        // Nur die parts Tabelle abfragen
+        const { data: parts, error } = await supabase.from('parts').select('*')
+        
+        if (error) throw error
 
-        if (partsError) throw new Error(`Parts: ${partsError.message}`)
-        if (eventsError) throw new Error(`Tracking Events: ${eventsError.message}`)
+        const filteredParts = range ? parts.filter(p => new Date(p.created_at) >= range) : parts
 
-        // Daten filtern
-        const filteredParts = range 
-          ? parts.filter(p => new Date(p.created_at) >= range)
-          : parts
+        // Monatsdaten berechnen
+        const monthAgo = new Date()
+        monthAgo.setMonth(monthAgo.getMonth() - 1)
+        const partsLastMonth = parts.filter(p => new Date(p.created_at) >= monthAgo)
 
-        const filteredEvents = range 
-          ? events.filter(e => new Date(e.timestamp) >= range)
-          : events
-
-        // Eindeutige Nutzer zählen
-        const uniqueUserIds = new Set(filteredEvents.map(e => e.user_id).filter(id => id))
+        // Durchschnittspreis berechnen
+        const avgPrice = filteredParts.length > 0 
+          ? (filteredParts.reduce((sum, part) => sum + parseFloat(part.price), 0) / filteredParts.length).toFixed(2)
+          : 0
 
         // UI aktualisieren
-        document.getElementById('parts').textContent = filteredParts.length
-        document.getElementById('total_events').textContent = filteredEvents.length
-        document.getElementById('unique_users').textContent = uniqueUserIds.size
-        
-        // Pageviews sind Events vom Typ 'pageview'
-        const pageviews = filteredEvents.filter(e => e.event_type === 'pageview').length
-        document.getElementById('pageviews').textContent = pageviews
+        document.getElementById('parts').textContent = `⚙️ Hochgeladene Teile: ${filteredParts.length}`
+        document.getElementById('parts_last_month').textContent = `📅 Teile (letzter Monat): ${partsLastMonth.length}`
+        document.getElementById('avg_price').textContent = `💰 Durchschnittspreis: ${avgPrice} €`
 
-        // Diagramm vorbereiten
-        const eventCountsByDay = {}
-        filteredEvents.forEach(e => {
-          const d = new Date(e.timestamp).toISOString().slice(0, 10)
-          eventCountsByDay[d] = (eventCountsByDay[d] || 0) + 1
+        // Diagramm mit Parts-Daten erstellen
+        const partsByDay = {}
+        filteredParts.forEach(p => {
+          const d = new Date(p.created_at).toISOString().slice(0, 10)
+          partsByDay[d] = (partsByDay[d] || 0) + 1
         })
 
-        const labels = Object.keys(eventCountsByDay).sort()
-        const values = labels.map(l => eventCountsByDay[l])
+        const labels = Object.keys(partsByDay).sort()
+        const values = labels.map(l => partsByDay[l])
 
+        if (chart) chart.destroy()
         chart = new Chart(chartCanvas, {
           type: 'bar',
           data: {
             labels: labels,
-            datasets: [{
-              label: 'Events pro Tag',
-              data: values,
-              backgroundColor: '#3498db',
-              borderColor: '#2980b9',
-              borderWidth: 1
+            datasets: [{ 
+              label: 'Hochgeladene Teile pro Tag', 
+              data: values, 
+              backgroundColor: '#1abc9c' 
             }]
           },
           options: {
             responsive: true,
-            plugins: {
-              legend: {
-                position: 'top',
-              }
-            },
-            scales: { 
-              y: { 
-                beginAtZero: true,
-                title: { display: true, text: 'Anzahl Events' }
-              },
-              x: {
-                title: { display: true, text: 'Datum' }
-              }
-            }
+            scales: { y: { beginAtZero: true } }
           }
         })
 
-        loadingElement.style.display = 'none'
-        statsElement.style.display = 'grid'
-
+        errorElement.style.display = 'none'
       } catch (error) {
         console.error('Fehler:', error)
-        loadingElement.style.display = 'none'
         errorElement.style.display = 'block'
         errorElement.textContent = `Fehler: ${error.message}`
       }
